--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
@@ -20,7 +24,100 @@ a {
     color-scheme: dark;
   }
   body {
-    color: white;
-    background: black;
+    @apply text-slate-300 bg-zinc-900;
+  }
+
+}
+
+.btn {
+  @apply font-bold py-2 px-4 rounded;
+}
+.btn-violet {
+  @apply bg-violet-500 text-white;
+}
+.btn-violet:hover {
+  @apply bg-violet-700;
+}
+
+input:focus-within ~ label,
+input:not(:placeholder-shown) ~ label {
+  @apply transform scale-75 -translate-y-6;
+}
+
+input:focus-within ~ label {
+  @apply text-violet-500;
+}
+
+
+.input-wrp {
+  @apply relative my-4 border-b-2 focus-within:border-violet-500 duration-200;
+}
+
+.input-txt {
+  @apply block w-full appearance-none focus:outline-none bg-transparent;
+}
+
+.input-txt-lbl {
+  @apply absolute top-0 -z-1 origin-0 duration-200;
+}
+
+.dot-collision {
+  position: relative;
+  width: 10px;
+  height: 10px;
+  border-radius: 5px;
+  background-color: white;
+  color: white;
+}
+
+.dot-collision::before, .dot-collision::after {
+  content: '';
+  display: inline-block;
+  position: absolute;
+  top: 0;
+}
+
+.dot-collision::before {
+  left: -10px;
+  width: 10px;
+  height: 10px;
+  border-radius: 5px;
+  background-color: white;
+  color: white;
+  animation: dotCollisionBefore 2s infinite ease-in;
+}
+
+.dot-collision::after {
+  left: 10px;
+  width: 10px;
+  height: 10px;
+  border-radius: 5px;
+  background-color: white;
+  color: white;
+  animation: dotCollisionAfter 2s infinite ease-in;
+  animation-delay: 1s;
+}
+
+@keyframes dotCollisionBefore {
+  0%,
+  50%,
+  75%,
+  100% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(-15px);
+  }
+}
+
+@keyframes dotCollisionAfter {
+  0%,
+  50%,
+  75%,
+  100% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(15px);
   }
 }
