--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,6 @@ body {
 }
 
 a {
-  color: inherit;
   text-decoration: none;
 }
 
@@ -48,9 +47,20 @@ input:focus-within ~ label {
   @apply text-violet-500;
 }
 
+a {
+  @apply text-teal-600;
+}
 
 .input-wrp {
-  @apply relative my-4 border-b-2 focus-within:border-violet-500 duration-200;
+  @apply relative border-b-2 focus-within:border-violet-500 duration-200 flex;
+}
+
+.input-wrp.input-err {
+  @apply border-red-500;
+
+}
+.input-err > input ~ label {
+  @apply text-red-500;
 }
 
 .input-txt {
@@ -119,5 +129,21 @@ input:focus-within ~ label {
   }
   25% {
     transform: translateX(15px);
+  }
+}
+
+.bouncing {
+  animation: bounce 2s infinite ease-in-out;
+}
+
+@keyframes bounce {
+  0%,
+  25%,
+  50%,
+  100% {
+    transform: translateY(0);
+  }
+  75% {
+    transform: translateY(15px);
   }
 }
