--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,8 +6,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: Rubik;
 }
 
 a {
@@ -26,6 +25,10 @@ a {
     @apply text-slate-300 bg-zinc-900;
   }
 
+}
+
+.glitch {
+  font-family: "Rubik Glitch";
 }
 
 .btn {
